# solidity

./: CMakeLists.txt  Changelog.md
cmake/: EthOptions.cmake
docs/: control-structures.rst  error-rules.txt  miscellaneous.rst  yul.rst
liblangutil/: CharStream.cpp  CharStream.h  EVMVersion.h  ErrorReporter.cpp  ErrorReporter.h  ParserBase.cpp  ParserBase.h
libsolc/: libsolc.cpp
libsolidity/codegen/: ABIFunctions.cpp  ABIFunctions.h  CompilerUtils.cpp  ExpressionCompiler.cpp  YulUtilFunctions.cpp  YulUtilFunctions.h
libsolidity/codegen/ir/: IRGenerationContext.h  IRGenerator.cpp
libsolidity/formal/: SMTChecker.cpp  SMTChecker.h  VariableUsage.cpp  VariableUsage.h
libsolidity/interface/: StandardCompiler.cpp
libsolidity/parsing/: Parser.cpp
libsolidityp0/: CMakeLists.txt
libsolidityp0/analysis/: ConstantEvaluator.cpp  ConstantEvaluator.h  ContractLevelChecker.cpp  ContractLevelChecker.h  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  ControlFlowBuilder.cpp  ControlFlowBuilder.h  ControlFlowGraph.cpp  ControlFlowGraph.h  DeclarationContainer.cpp  DeclarationContainer.h  DocStringAnalyser.cpp  DocStringAnalyser.h  GlobalContext.cpp  GlobalContext.h  NameAndTypeResolver.cpp  NameAndTypeResolver.h  PostTypeChecker.cpp  PostTypeChecker.h  ReferencesResolver.cpp  ReferencesResolver.h  StaticAnalyzer.cpp  StaticAnalyzer.h  SyntaxChecker.cpp  SyntaxChecker.h  TypeChecker.cpp  TypeChecker.h
libsolidityp0/ast/: AST.cpp  AST.h  ASTAnnotations.cpp  ASTAnnotations.h  ASTEnums.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTPrinter.cpp  ASTPrinter.h  ASTVisitor.h  AST_accept.h  TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
libsolidityp0/interface/: CompilerStack.cpp  CompilerStack.h  StandardCompiler.cpp  StandardCompiler.h  Version.cpp
libsolidityp0/parsing/: DocStringParser.cpp  DocStringParser.h  Parser.cpp  Parser.h  SemVerHandler.cpp  Version.cpp
scripts/: clean-build.sh  cmake-debug.sh  solc-syntax.sh  tests.sh
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h
test/: TestCase.cpp  cmdlineTests.sh
test/cmdlineTests/standard_irOptimized_requested/: output.json
test/cmdlineTests/standard_ir_requested/: output.json
test/libsolidity/: ABIDecoderTests.cpp  SolidityEndToEndTest.cpp
test/libsolidity/semanticTests/abiEncoderV2/: calldata_array_two_dynamic.sol  calldata_array_two_static.sol
test/libsolidity/semanticTests/viaYul/: detect_add_overflow.yul  simple_assignment.sol
test/libsolidity/syntaxTests/parsing/: address_payable_conversion.sol  local_const_variable.sol
test/libyul/: YulInterpreterTest.cpp  YulOptimizerTest.cpp
test/libyul/yulOptimizerTests/fullSuite/: aztec.yul
test/tools/: yulrun.cpp
test/tools/ossfuzz/: protoToYul.cpp  protoToYul.h  strictasm_diff_ossfuzz.cpp  yulFuzzerCommon.cpp  yulProto_diff_ossfuzz.cpp
test/tools/yulInterpreter/: Interpreter.h
testp0/: CMakeLists.txt  Common.cpp  Common.h  InteractiveTests.h  Metadata.cpp  Metadata.h  Options.cpp  Options.h  TestCase.cpp  TestCase.h  boostTest.cpp
testp0/liblangutil/: CharStream.cpp  SourceLocation.cpp
testp0/libsolidityp0/: ASTRecoveryTest.cpp  ASTRecoveryTest.h  AnalysisFramework.cpp  AnalysisFramework.h  Common.h  ErrorCheck.cpp  SolidityParser.cpp  SolidityParser.cpp-notyet  SolidityParserError.cpp  SolidityParserRecovery.cpp  SolidityScanner.cpp  StandardCompiler.cpp  SyntaxTest.cpp  SyntaxTest.h
testp0/libsolidityp0/ASTRecoveryTests/: constructor_recovers.json  contract_recovery.json  error_to_eos.json
testp0/libsolidityp0/SyntaxRecoveryTests/: e1.sol
testp0/libsolidityp0/errorRecoveryTests/: do_not_delete_at_error.sol  mismatched-pragma.sol  missing_rhs.sol
testp0/libsolidityp0/syntaxRecoveryTests/: e1.sol  e3.sol  e4.sol  e5.sol  e6.sol
testp0/libsolidityp0/syntaxTests/parsing/errorRecovery/: e1.sol  e2.sol  missing_stmt_semicolon.sol  semicolon_error_to_EOS.sol
testp0/libsolidityp0/util/: TestFileParser.cpp  TestFileParser.h
testp0/tools/: CMakeLists.txt  IsolTestOptions.cpp  IsolTestOptions.h  isoltest.cpp  tokens.cpp
testparser/: CMakeLists.txt  Common.cpp  Common.h  InteractiveTests.h  Options.cpp  Options.h  TestCase.h  boostTest.cpp
testparser/liblangutil/: SourceLocation.cpp
testparser/libsolidity/: SolidityParser.cpp  SolidityScanner.cpp  SolidityTypes.cpp
